Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76827

ItemParticle give() method body not implemented

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.0 Alpha
    • 5.12.4
    • Quick: Particles
    • None
    • All
    • 9d9c5a786c1c3c5986461fc9d885ca7c5ef06b83 (qt/qtdeclarative/5.15)

      I was trying to use the ItemParticle item and the give() method but nothing seem to work. Checking the source I discovered with surprise that the current status of this call is the following (source here):

       

      void QQuickItemParticle::give(QQuickItem *item)
      {
       //TODO: This
       Q_UNUSED(item);
      }

       

      How is possible? A officially documented method not developed yet?

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            w00t Robin Burchell
            suppaman Fabio Falsini
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes