src/particles/qquickitemparticle_p.h
@@ -130,13 +130,14 @@ class QQuickItemParticleAttached : public QObject
     Q_PROPERTY(QQuickItemParticle* particle READ particle CONSTANT);
 public:
     QQuickItemParticleAttached(QObject* parent)
-        : QObject(parent), m_mp(0)
+        : QObject(parent), m_mp(0), m_parentItem(nullptr)
     {;}
     QQuickItemParticle* particle() const { return m_mp; }
     void detach(){Q_EMIT detached();}
     void attach(){Q_EMIT attached();}
 private:
     QQuickItemParticle* m_mp;
+    QPointer<QQuickItem> m_parentItem;
     friend class QQuickItemParticle;
 Q_SIGNALS:
     void detached();
